--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "5.3.0",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.4.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "serve:client": "react-scripts start",
