--- a/package.json
+++ b/package.json
@@ -1,57 +1,29 @@
 {
   "name": "ebs-fe-test",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.3.2",
-    "axios": "^0.26.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "5.3.0",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve:client": "react-scripts start",
-    "serve:server": "node ./server"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app",
-    "rules": {
-      "react-hooks/exhaustive-deps": "off"
-    }
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
-  "prettier": {
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "printWidth": 120,
-    "jsxBracketSameLine": false,
-    "endOfLine": "lf"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npx prettier --write -c .prettierrc \"src/**/*.{ts,tsx,json,css,scss}\""
-    }
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10"
   }
 }
